mobile devices actions alignment correct v1

--- a/css/style.css
+++ b/css/style.css
@@ -162,9 +162,8 @@ img{
 
 .form-content {
   width: 60%;
-  padding-top: 65px;
-  padding-left: 51px;
-  padding-right: 51px; }
+  padding: 65px 51px;
+}
 
 .form-header {
   text-align: center; }
@@ -319,9 +318,13 @@ textarea.form-control {
   top: 13px;
   right: 28px;
   font-family: Material-Design-Iconic-Font; }
+
 .actions li[aria-disabled="true"] a {
   opacity: 0;
-  transition: all 1s; }
+  display: none;
+  transition: all 1s;
+}
+
 .actions li[aria-disabled="false"] ~ li a {
   background: #6d7f52;
   color: #fff; }
@@ -466,7 +469,7 @@ textarea.form-control {
 
     .form-content {
       width: 100%;
-      padding: 30px 20px 30px;
+      padding: 30px 20px 65px;
     }
     h3{
       margin-bottom: 30px;
@@ -494,10 +497,12 @@ textarea.form-control {
       top: 455px;
       transform: translateX(50%); }
 
+
     .actions {
-      right: 50%;
+      /*position: absolute;*/
       transform: translateX(50%);
-      bottom: 3%;
+      top: 95%;
+      right: 50%;
     }
   }
 }
